openshift-lab/webapp-dev-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: webapp-dev
spec:
  selector:
    app: webapp-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
