openshift-lab/app-named-based-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: name-based-ing
spec:
  rules:
  - host: dev.com
    http:
      paths:
      - backend:
          serviceName: webapp-dev
          servicePort: 80
  - host: qa.com
    http:
      paths:
      - backend:
          serviceName: webapp-qa
          servicePort: 80
